// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  collapsable={false}
  style={
    Array [
      Object {
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      null,
    ]
  }
>
  <Flex
    align="end"
    direction="row"
  >
    <Connect(withI18nextTranslation(CelebrateItemName))
      customContent={
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "paddingLeft": 10,
              "paddingRight": 5,
            }
          }
        >
          Roge Goers
        </MyText>
      }
      name="Roge Goers"
      organization={
        Object {
          "id": "7342342",
        }
      }
      person={
        Object {
          "first_name": "Roge",
          "id": "notme",
          "last_name": "Goers",
        }
      }
      pressable={true}
    />
    <CardTime
      date="2018-06-11 12:00:00 UTC"
      format="comment"
    />
  </Flex>
  <Flex
    direction="row"
  >
    <withI18nextTranslation(PopupMenu)
      actions={
        Array [
          Object {
            "onPress": [MockFunction],
            "text": "text",
          },
        ]
      }
      triggerOnLongPress={true}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            null,
          ]
        }
      >
        <MyText
          style={
            Array [
              Object {
                "paddingVertical": 3,
              },
              null,
            ]
          }
        >
          hello roge
        </MyText>
      </View>
    </withI18nextTranslation(PopupMenu)>
    <Flex
      value={1}
    />
  </Flex>
</View>
`;

exports[`renders correctly as mine 1`] = `
<View
  collapsable={false}
  style={
    Array [
      Object {
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      null,
    ]
  }
>
  <Flex
    align="end"
    direction="row"
  >
    <Flex
      value={1}
    />
    <CardTime
      date="2018-06-11 12:00:00 UTC"
      format="comment"
    />
  </Flex>
  <Flex
    direction="row"
  >
    <Flex
      value={1}
    />
    <withI18nextTranslation(PopupMenu)
      actions={
        Array [
          Object {
            "onPress": [MockFunction],
            "text": "text",
          },
        ]
      }
      triggerOnLongPress={true}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#52C5DC",
            },
          ]
        }
      >
        <MyText
          style={
            Array [
              Object {
                "paddingVertical": 3,
              },
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          hello roge
        </MyText>
      </View>
    </withI18nextTranslation(PopupMenu)>
  </Flex>
</View>
`;

exports[`renders editing correctly 1`] = `
<View
  collapsable={false}
  style={
    Array [
      Object {
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
      },
    ]
  }
>
  <Flex
    align="end"
    direction="row"
  >
    <Connect(withI18nextTranslation(CelebrateItemName))
      customContent={
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "paddingLeft": 10,
              "paddingRight": 5,
            }
          }
        >
          Roge Goers
        </MyText>
      }
      name="Roge Goers"
      organization={
        Object {
          "id": "7342342",
        }
      }
      person={
        Object {
          "first_name": "Roge",
          "id": "notme",
          "last_name": "Goers",
        }
      }
      pressable={true}
    />
    <CardTime
      date="2018-06-11 12:00:00 UTC"
      format="comment"
    />
  </Flex>
  <Flex
    direction="row"
  >
    <withI18nextTranslation(PopupMenu)
      actions={
        Array [
          Object {
            "onPress": [MockFunction],
            "text": "text",
          },
        ]
      }
      triggerOnLongPress={true}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            null,
          ]
        }
      >
        <MyText
          style={
            Array [
              Object {
                "paddingVertical": 3,
              },
              null,
            ]
          }
        >
          hello roge
        </MyText>
      </View>
    </withI18nextTranslation(PopupMenu)>
    <Flex
      value={1}
    />
  </Flex>
</View>
`;

exports[`renders my reported comment 1`] = `
<View
  collapsable={false}
  style={
    Array [
      Object {
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      null,
    ]
  }
>
  <Flex
    align="end"
    direction="row"
  >
    <Connect(withI18nextTranslation(CelebrateItemName))
      customContent={
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "paddingLeft": 10,
              "paddingRight": 5,
            }
          }
        >
          Roge Goers
        </MyText>
      }
      name="Roge Goers"
      organization={
        Object {
          "id": "7342342",
        }
      }
      person={
        Object {
          "first_name": "Roge",
          "id": "me",
          "last_name": "Goers",
        }
      }
      pressable={false}
    />
    <CardTime
      date="2018-06-11 12:00:00 UTC"
      format="comment"
    />
  </Flex>
  <Flex
    direction="row"
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 8,
            "marginVertical": 5,
            "paddingHorizontal": 13,
            "paddingVertical": 8,
          },
          null,
        ]
      }
    >
      <MyText
        style={
          Array [
            Object {
              "paddingVertical": 3,
            },
            null,
          ]
        }
      >
        hello roge
      </MyText>
    </View>
    <Flex
      value={1}
    />
  </Flex>
</View>
`;

exports[`renders reported comment 1`] = `
<View
  collapsable={false}
  style={
    Array [
      Object {
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      null,
    ]
  }
>
  <Flex
    align="end"
    direction="row"
  >
    <Connect(withI18nextTranslation(CelebrateItemName))
      customContent={
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "paddingLeft": 10,
              "paddingRight": 5,
            }
          }
        >
          Roge Goers
        </MyText>
      }
      name="Roge Goers"
      organization={
        Object {
          "id": "7342342",
        }
      }
      person={
        Object {
          "first_name": "Roge",
          "id": "notme",
          "last_name": "Goers",
        }
      }
      pressable={false}
    />
    <CardTime
      date="2018-06-11 12:00:00 UTC"
      format="comment"
    />
  </Flex>
  <Flex
    direction="row"
  >
    <withI18nextTranslation(PopupMenu)
      actions={
        Array [
          Object {
            "onPress": [MockFunction],
            "text": "text",
          },
        ]
      }
      disabled={true}
      triggerOnLongPress={true}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            null,
          ]
        }
      >
        <MyText
          style={
            Array [
              Object {
                "paddingVertical": 3,
              },
              null,
            ]
          }
        >
          hello roge
        </MyText>
      </View>
    </withI18nextTranslation(PopupMenu)>
    <Flex
      value={1}
    />
  </Flex>
</View>
`;

exports[`renders without menu actions 1`] = `
<View
  collapsable={false}
  style={
    Array [
      Object {
        "paddingHorizontal": 20,
        "paddingVertical": 8,
      },
      null,
    ]
  }
>
  <Flex
    align="end"
    direction="row"
  >
    <Connect(withI18nextTranslation(CelebrateItemName))
      customContent={
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "paddingLeft": 10,
              "paddingRight": 5,
            }
          }
        >
          Roge Goers
        </MyText>
      }
      name="Roge Goers"
      organization={
        Object {
          "id": "7342342",
        }
      }
      person={
        Object {
          "first_name": "Roge",
          "id": "notme",
          "last_name": "Goers",
        }
      }
      pressable={true}
    />
    <CardTime
      date="2018-06-11 12:00:00 UTC"
      format="comment"
    />
  </Flex>
  <Flex
    direction="row"
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 8,
            "marginVertical": 5,
            "paddingHorizontal": 13,
            "paddingVertical": 8,
          },
          null,
        ]
      }
    >
      <MyText
        style={
          Array [
            Object {
              "paddingVertical": 3,
            },
            null,
          ]
        }
      >
        hello roge
      </MyText>
    </View>
    <Flex
      value={1}
    />
  </Flex>
</View>
`;
